--- a/Codigo TP2/UI.Console/UI.Console.csproj
+++ b/Codigo TP2/UI.Console/UI.Console.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>UI.Console</RootNamespace>
     <AssemblyName>UI.Console</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -48,9 +49,6 @@
     <Compile Include="Usuarios.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\Bussiness.Entities\Bussiness.Entities.csproj">
       <Project>{061a33ba-28ce-4a67-af43-52307f2dde4f}</Project>
       <Name>Bussiness.Entities</Name>
@@ -59,6 +57,9 @@
       <Project>{930806d3-259c-423d-adc0-f19aa4c59c23}</Project>
       <Name>Bussiness.Logic</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
