--- a/Codigo TP2/Bussiness.Entities/Bussiness.Entities.csproj
+++ b/Codigo TP2/Bussiness.Entities/Bussiness.Entities.csproj
@@ -41,9 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlumnoInscripcion.cs" />
     <Compile Include="BussinessEntity.cs" />
+    <Compile Include="Comision.cs" />
+    <Compile Include="Curso.cs" />
+    <Compile Include="DocenteCurso.cs" />
+    <Compile Include="Especialidad.cs" />
+    <Compile Include="Materia.cs" />
     <Compile Include="Modulo.cs" />
     <Compile Include="ModuloUsuario.cs" />
+    <Compile Include="Persona.cs" />
+    <Compile Include="Plan.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
