--- a/Codigo TP2/Bussiness.Logic/Bussiness.Logic.csproj
+++ b/Codigo TP2/Bussiness.Logic/Bussiness.Logic.csproj
@@ -42,6 +42,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BussinessLogic.cs" />
+    <Compile Include="ComisionLogic.cs" />
+    <Compile Include="CursoLogic.cs" />
+    <Compile Include="EspecialidadLogic.cs" />
+    <Compile Include="MateriaLogic.cs" />
+    <Compile Include="PlanLogic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioLogic.cs" />
   </ItemGroup>
