--- a/Codigo TP2/Data.Database/Data.Database/Data.Database.csproj
+++ b/Codigo TP2/Data.Database/Data.Database/Data.Database.csproj
@@ -60,6 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapter.cs" />
+    <Compile Include="ComisionAdapter.cs" />
+    <Compile Include="CursoAdapter.cs" />
+    <Compile Include="EspecialidadAdapter.cs" />
+    <Compile Include="MateriaAdapter.cs" />
+    <Compile Include="PlanAdapter.cs" />
     <Compile Include="UsuarioAdapter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
